filtrado por fecha con estilo

--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -101,6 +101,7 @@
     <br>
     </ul>
   </div>
+  Filtrado por fecha
   <form action="/filtro/" method="GET">
     <input type="date" name="fecha" >
     <input type="submit" name="Buscar">
