--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -42,11 +42,16 @@
         <div class="row post-meta">
           <div class="col-md-8">
             <p>Postedado por
-              <a href="#" on>Usuario{{post.id}}</a>
+              <a href="#" on>{{post.id_user}}</a>
               - {{post.fecha_publicacion}}
 
             </p>
           </div>
+
+
+          {% if user.is_authenticated %}
+          {% if user.id == post.id_user_id %}
+
           <div class="col-md-4">
             <p class="float-right">
               <a href="{% url 'editar' post.id %}"
@@ -60,6 +65,9 @@
                   src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
             </p>
           </div>
+
+          {% endif %}
+          {% endif %}
 
         </div>
         {% if not forloop.last %}
