--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -103,7 +103,8 @@
   </div>
   Filtrado por fecha
   <form action="/filtro/" method="GET">
-    <input type="date" name="fecha" >
+    <input type="date" name="desde" >
+    <input type="date" name="hasta" >
     <input type="submit" name="Buscar">
   </form>
 </div>
