--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -14,7 +14,7 @@
           <h1>{{post.titulo}}</h1>
           <h2 class="subheading">{{post.subtitulo}}</h2>
           <span class="meta">Posteado por
-            <a href="#">{{post.autor}}</a>
+            <a href="#">{{post.id_user}}</a>
             {{post.fecha_publicacion}}
           </span>
         </div>
@@ -146,7 +146,7 @@
 
             <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
 
-            {{comentario.fecha_publicacion}}
+           <h7> {{comentario.fecha_creacion}}</h7>
           </div>
         </div>
       </div>
