--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -105,11 +105,19 @@
     <br>
     </ul>
   </div>
-  Filtrado por fecha
-  <form action="/filtro/" method="GET">
-    <input type="date" name="fecha" >
-    <input type="submit" name="Buscar">
-  </form>
+  <div>
+
+  </div>
+  <div class="class container">
+    <strong>
+      <p style="margin-bottom: 5px">Filtrado por fecha</p>
+    </strong>
+    <form action="/filtro/" method="GET">
+      <input type="date" name="fecha">
+      <input type="submit" name="Buscar">
+    </form>
+
+  </div>
 </div>
 </div>
 <!-- <div class='container text-center '>
