--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -3,8 +3,12 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<!--Estos scripts son para los botones, ni idea como editarlos-->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="{% static 'js/confirmacion.js'%}"></script>
 
 <!-- Page Header -->
+
 <header class="masthead" style="background-image: url('{{ STATIC_URL }}img/post-bg.jpg')">
   <div class="overlay"></div>
   <div class="container">
@@ -54,8 +58,8 @@
 
         {% if user.is_authenticated %}
         <!--div class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample"-->
-          <div class="card-body">
-            <form method="POST"> 
+        <div class="card-body">
+          <form method="POST">
             {% csrf_token %}
             <!-- <div class="container" style="width: 750px">
         <div class="row">
@@ -65,103 +69,103 @@
             <!-- </div>
         </div>
     </div> -->
-        
-
-       </form>
-
-        <script type="text/javascript">
-           
-        var name = "{{user.id}}"
-        document.getElementById("identificador").value
-            = name;
 
 
-       </script>
+          </form>
 
-{% endif %}
+          <script type="text/javascript">
+
+            var name = "{{user.id}}"
+            document.getElementById("identificador").value
+              = name;
+
+
+          </script>
+
+          {% endif %}
 
 
 
 
-          </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
 
-    {% if comentarios %}
-    <br>
-    <br>
+{% if comentarios %}
+<br>
+<br>
 
-    <div class="accordion" id="accordionExample">
-      {% for comentario in comentarios %}
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h2 class="mb-0">
-            <button id="" class="btn btn-block text-left " type="button" data-toggle="collapse"
-              data-target="#collapse{{comentario.id}}" aria-expanded="true" aria-controls="collapse{{comentario.id}}">
-              {{comentario.autor}}
-            </button>
-          </h2>
-        </div>
+<div class="accordion" id="accordionExample">
+  {% for comentario in comentarios %}
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+        <button id="" class="btn btn-block text-left " type="button" data-toggle="collapse"
+          data-target="#collapse{{comentario.id}}" aria-expanded="true" aria-controls="collapse{{comentario.id}}">
+          {{comentario.autor}}
+        </button>
+      </h2>
+    </div>
 
-        <div id="collapse{{comentario.id}}" class="collapse" aria-labelledby="headingOne"
-          data-parent="#accordionExample">
-          <div class="card-body">
-            <p style="margin-top: 15px; margin-bottom: 15px; font-size:15px;">{{comentario.contenido}}</p>
-            <br>
-
-
-
+    <div id="collapse{{comentario.id}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body">
+        <p style="margin-top: 15px; margin-bottom: 15px; font-size:15px;">{{comentario.contenido}}</p>
+        <br>
 
 
-            <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
 
 
-            {% if user.is_authenticated %}
 
-          {% if user.id == comentario.autor_id %}
-          <div class="container" style="padding-left: 700px;
+        <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
+
+
+        {% if user.is_authenticated %}
+
+        {% if user.id == comentario.autor_id %}
+        <div class="container" style="padding-left: 700px;
           margin-right: 10px;">
-            <div class="row">
-              <div class="col-md-4">
-                <p class="float-right">
-                  <a href="{% url 'edicion' comentario.id%}"
-                    style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
-                    role="button" class="btn btn-outline-info" type="image/x-icon"> <img
-                      src="{% static 'img/pencil.svg' %}" style="width:17px;height:17px" alt='' /></a>
+          <div class="row">
+            <div class="col-md-4">
+              <p class="float-right">
+                <a href="{% url 'edicion' comentario.id%}"
+                  style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                  role="button" class="btn btn-outline-info" type="image/x-icon"> <img
+                    src="{% static 'img/pencil.svg' %}" style="width:17px;height:17px" alt='' /></a>
 
-                  <a href="#" onclick="eliminarComentario({{comentario.id}}, {{post.id }})"
-                    style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
-                    role="button" class="btn btn-outline-danger" type="image/x-icon"> <img
-                      src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
-                </p>
-              </div>
+                <a href="#" onclick="eliminarComentario({{comentario.id}}, {{post.id }})"
+                  style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                  role="button" class="btn btn-outline-danger" type="image/x-icon"> <img
+                    src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
+              </p>
             </div>
           </div>
         </div>
-        {% endif %}
-        {% endif %}
-
-
-
-            <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
-
-           <h7> {{comentario.fecha_creacion}}</h7>
-          </div>
-        </div>
       </div>
+      {% endif %}
+      {% endif %}
 
 
 
-          
+      <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
 
-
-
-      {% endfor %}
+      <h7> {{comentario.fecha_creacion}}</h7>
     </div>
-    {% endif %}
-
   </div>
+</div>
+
+
+
+
+
+
+
+{% endfor %}
+</div>
+{% endif %}
+
+</div>
 </div>
 
 {% endblock %}
