Cambie el style de la fecha de publicacion de comentario

--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -150,7 +150,8 @@
 
       <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
 
-      <h7> {{comentario.fecha_creacion}}</h7>
+           <br>
+      <p style="margin-top: 15px; margin-bottom: 15px; font-size:15px;">Publicado: {{comentario.fecha_creacion}}</p>
     </div>
   </div>
 </div>
