--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -32,6 +32,11 @@
   <div class="container ">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+      <img src="{{post.imagen.url}}">
+
+
+    </br></br>
+
         {{post.contenido}}
       </div>
     </div>
