--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -32,8 +32,9 @@
   <div class="container ">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+        {% if post.imagen %}
       <img src="{{post.imagen.url}}">
-
+        {% endif %}
 
     </br></br>
 
