--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+
+{% if existe %}
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="{% static 'js/confirmacion.js'%}"></script>
 <!-- Page Header -->
@@ -22,12 +24,12 @@
 
 
 <!-- Main Content -->
-{% if categoria_posts|length > 0 %}
+{% if page_obj|length > 0 %}
 <div class="container card">
   <div class="row card-body">
     <div class="col-lg-8 col-md-10 mx-auto">
 
-      {% for post in categoria_posts %}
+      {% for post in page_obj %}
       <div class="post-preview ">
 
         <h2 class="post-title">
@@ -81,7 +83,43 @@
 </div>
 {% endif %}
 
-{% if categoria_posts|length is 0 %}
+
+
+        <!-- -------------------------------------- ACA VA LO DE PAGINACION--------------------- -->
+
+
+          {% if page_obj.has_previous %}
+
+            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+            <a class="btn btn-outline-info mb-4" href="?page={{page_obj.previous_page_number}} ">Previous</a>
+
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+              {% if page_obj.number == num %}
+                <a class="btn btn-info mb-4" href="?page={{num}}">{{num}}</a>
+              {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                <a class="btn btn-outline-info mb-4" href="?page={{num}}">{{num}}</a>
+              {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+              <a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>
+              <a class="btn btn-outline-info mb-4" href="?page={{page_obj.paginator.num_pages}} ">Last</a>
+            {% endif %}
+
+
+
+
+           <!-- -------------------------------------- ACA TERMINA LO DE PAGINACION --------------------- -->
+
+
+
+
+
+
+
+{% if page_obj|length is 0 %}
 
 <div class="container card" style="text-align: center">
   <div class="row">
@@ -98,7 +136,9 @@
 
 {% endif %}
 
-{% if categoria_posts|length > 0 %}
+
+{% if page_obj|length > 0 %}
+<p>
 Filtrado por fecha
 <form action="/categoria/{{categ}}/filtro/" method="GET">
   <input type="date" name="desde">
@@ -108,7 +148,10 @@ Filtrado por fecha
 
 </div>
 </div>
-</div>
+</div></p>
+{% endif %}
+{% else %}
+ESTO NO ES UNA CATEGORIA
 {% endif %}
 
 {% endblock %}
