ajuste de imagen

--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -31,9 +31,9 @@
 <article>
   <div class="container ">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="col-lg-8 col-md-10 mx-auto" >
         {% if post.imagen %}
-      <img src="{{post.imagen.url}}">
+      <img src="{{post.imagen.url}}" style="width: 250px;">
         {% endif %}
 
     </br></br>
