--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -23,9 +23,12 @@
 
 <!-- Main Content -->
 {% if categoria_posts|length > 0 %}
-<div class="container card">
+<div class="container" style="position: relative;">
   <div class="row card-body">
-    <div class="col-lg-8 col-md-10 mx-auto">
+    <div class=" card col-lg-8" style="margin-left: 15px;
+    margin-right: 10px;">
+        <div class="col-lg-8 col-md-10 mx-auto" style="margin-left: 15px;
+          margin-right: 10px;padding-top: 15px">
 
       {% for post in categoria_posts %}
       <div class="post-preview ">
@@ -43,7 +46,7 @@
           <div class="col-md-8">
             <p>Postedado por
               <a href="#" on>{{post.id_user}}</a>
-              - {{post.fecha_publicacion}}
+              <br> <span style="font-size: 15px">{{post.fecha_publicacion}}</span>
 
             </p>
           </div>
@@ -78,6 +81,7 @@
       {% endfor %}
     </div>
   </div>
+  </div>
 </div>
 {% endif %}
 
@@ -99,12 +103,39 @@
 {% endif %}
 
 {% if categoria_posts|length > 0 %}
-Filtrado por fecha
-<form action="/categoria/{{categ}}/filtro/" method="GET">
-  <input type="date" name="desde">
-  <input type="date" name="hasta">
-  <input type="submit" name="Buscar">
-</form>
+<div class="container" style="position: relative;">
+  <div class="row">
+    <div class="col-md-4 col-lg-10" style="position: absolute; top: -305px;
+    left: 70%; width: 380px; padding-left: 40px">
+
+      <strong>
+        <p style="width: 80px;margin-bottom:10px">Archivos</p>
+      </strong>
+      <form action="/filtro/" method="GET">
+        <div class="form-group row">
+          <!-- <label for="example-text-input" class="col-1 col-form-label">Desde </label> -->
+
+          <div class="col-2">
+            <input type="date" name="desde">
+
+          </div>
+        </div>
+        <div class="form-group row">
+          <!-- <label for="example-text-input" class="col-1 col-form-label">Hasta</label> -->
+          <div class="col-2">
+            <input type="date" name="hasta">
+          </div>
+        </div>
+        <div class="d-grid gap-2 col-9 mx-auto" style="padding-left: 120px">
+          <button type="submit" name="Buscar" class="btn btn-outline-success btn-sm"
+            style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"> <img
+              src="{% static 'img/search.svg' %}" style="width:17px;height:17px" alt='' /></button>
+          <!-- <input type="submit" name="Buscar" class="btn btn-outline-success"> -->
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 
 </div>
 </div>
