--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -25,7 +25,7 @@
 <!-- Main Content -->
 <!-- <div style="position: relative;"> -->
 
-<div class="container" style="position: relative;;">
+<div class="container" style="position: relative;">
   <div class="row card-body">
     <div class=" card col-lg-8" style="margin-left: 15px;
   margin-right: 10px;">
@@ -33,7 +33,7 @@
         margin-right: 10px;padding-top: 15px">
 
         {% for post in object_list %}
-        <div class="post-preview ">
+        <div class="post-preview">
 
           <h2 class="post-title">
             <a href="{% url 'posts' post.pk %}">{{post.titulo}}</a>
@@ -48,7 +48,7 @@
             <div class="col-md-8">
               <p>Postedado por
                 <a href="#" on>{{post.id_user}}</a>
-                - {{post.fecha_publicacion}}
+                <br> <span style="font-size: 15px">{{post.fecha_publicacion}}</span>
               </p>
             </div>
 
@@ -83,7 +83,7 @@
           {% endif %}
           <div class="container">
             <div class="row">
-              <div class="col-md-4 col-lg-10" style="position: absolute; top: 0px;
+              <div class="col-md-4 col-lg-10" style="position: absolute; top: 200px;
             left: 140%;">
                 <strong>
                   <p style="margin-bottom: 5px">Categorias</p>
@@ -105,12 +105,39 @@
     <br>
     </ul>
   </div>
-  Filtrado por fecha
-  <form action="/filtro/" method="GET">
-    <input type="date" name="desde" >
-    <input type="date" name="hasta" >
-    <input type="submit" name="Buscar">
-  </form>
+  <div class="container" style="position: relative;">
+    <div class="row">
+      <div class="col-md-4 col-lg-10" style="position: absolute; top: -580px;
+      left: 70%; width: 380px; padding-left: 40px">
+
+        <strong>
+          <p style="width: 80px;margin-bottom:10px">Archivos</p>
+        </strong>
+        <form action="/filtro/" method="GET">
+          <div class="form-group row">
+            <!-- <label for="example-text-input" class="col-1 col-form-label">Desde </label> -->
+
+            <div class="col-2">
+              <input type="date" name="desde">
+
+            </div>
+          </div>
+          <div class="form-group row">
+            <!-- <label for="example-text-input" class="col-1 col-form-label">Hasta</label> -->
+            <div class="col-2">
+              <input type="date" name="hasta">
+            </div>
+          </div>
+          <div class="d-grid gap-2 col-9 mx-auto" style="padding-left: 120px">
+            <button type="submit" name="Buscar" class="btn btn-outline-success btn-sm"
+              style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"> <img
+                src="{% static 'img/search.svg' %}" style="width:17px;height:17px" alt='' /></button>
+            <!-- <input type="submit" name="Buscar" class="btn btn-outline-success"> -->
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 <!-- <div class='container text-center '>
