--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -25,7 +25,7 @@
 
 <!-- Main Content -->
 
-{% if categoria_posts|length > 0 %}
+{% if page_obj|length > 0 %}
 <div class="container" style="position: relative;">
 
   <div class="row card-body">
@@ -143,7 +143,7 @@
 {% endif %}
 
 
-{% if categoria_posts|length > 0 %}
+{% if page_obj|length > 0 %}
 <div class="container" style="position: relative;">
   <div class="row">
     <div class="col-md-4 col-lg-10" style="position: absolute; top: -305px;
@@ -184,7 +184,9 @@
 </div></p>
 {% endif %}
 {% else %}
-ESTO NO ES UNA CATEGORIA
+ <p>
+            <h5>Lo sentimos, esto no es una categoria... :(</h5>
+        </p>
 {% endif %}
 
 {% endblock %}
