--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -24,15 +24,10 @@
 
 
 <!-- Main Content -->
-
 {% if page_obj|length > 0 %}
-<div class="container" style="position: relative;">
-
+<div class="container card">
   <div class="row card-body">
-    <div class=" card col-lg-8" style="margin-left: 15px;
-    margin-right: 10px;">
-        <div class="col-lg-8 col-md-10 mx-auto" style="margin-left: 15px;
-          margin-right: 10px;padding-top: 15px">
+    <div class="col-lg-8 col-md-10 mx-auto">
 
       {% for post in page_obj %}
       <div class="post-preview ">
@@ -50,7 +45,7 @@
           <div class="col-md-8">
             <p>Postedado por
               <a href="#" on>{{post.id_user}}</a>
-              <br> <span style="font-size: 15px">{{post.fecha_publicacion}}</span>
+              - {{post.fecha_publicacion}}
 
             </p>
           </div>
@@ -84,7 +79,6 @@
       </div>
       {% endfor %}
     </div>
-  </div>
   </div>
 </div>
 {% endif %}
@@ -152,7 +146,7 @@
       <strong>
         <p style="width: 80px;margin-bottom:10px">Archivos</p>
       </strong>
-      <form action="/filtro/" method="GET">
+      <form action="/categoria/{{categ}}/filtro/" method="GET">
         <div class="form-group row">
           <!-- <label for="example-text-input" class="col-1 col-form-label">Desde </label> -->
 
@@ -178,15 +172,9 @@
   </div>
 </div>
 
-
 </div>
 </div>
-</div></p>
+</div>
 {% endif %}
-{% else %}
- <p>
-            <h5>Lo sentimos, esto no es una categoria... :(</h5>
-        </p>
 {% endif %}
-
 {% endblock %}
