--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -1,36 +1,20 @@
-{% extends 'base.html' %}
+{% extends './basePosts.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 
-{% block content %}
-
-{% if existe %}
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="{% static 'js/confirmacion.js'%}"></script>
 <!-- Page Header -->
-<header class="masthead" style="background-image: url(/static/img/home-bg.jpg)">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="site-heading">
-          <h1>{{categ}}</h1>
-          <span class="subheading">Blog de Noticias y Actualidad sobre {{categ}} </span>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+{% block titulo %} {{categ}}{% endblock %}
+{% block subtitulo %} Blog de Noticias y Actualidad sobre {{categ}} {% endblock %}
 
-
+{% block listado %}
 
 <!-- Main Content -->
 {% if page_obj|length > 0 %}
-<div class="container card">
-  <div class="row card-body">
-    <div class="col-lg-8 col-md-10 mx-auto">
+
+    <div class="col-lg-8 col-md-10 mx-auto post-container">
 
       {% for post in page_obj %}
-      <div class="post-preview ">
+      <div class="post-preview post-item ">
 
         <h2 class="post-title">
           <a href="{% url 'posts' post.pk %}">{{post.titulo}}</a>
@@ -79,102 +63,17 @@
       </div>
       {% endfor %}
     </div>
-  </div>
-</div>
+
 {% endif %}
-
-
-
-        <!-- -------------------------------------- ACA VA LO DE PAGINACION--------------------- -->
-
-
-          {% if page_obj.has_previous %}
-
-            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{page_obj.previous_page_number}} ">Previous</a>
-
-            {% endif %}
-
-            {% for num in page_obj.paginator.page_range %}
-              {% if page_obj.number == num %}
-                <a class="btn btn-info mb-4" href="?page={{num}}">{{num}}</a>
-              {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                <a class="btn btn-outline-info mb-4" href="?page={{num}}">{{num}}</a>
-              {% endif %}
-            {% endfor %}
-
-            {% if page_obj.has_next %}
-              <a class="btn btn-outline-info mb-4" href="?page={{page_obj.next_page_number}}">Next</a>
-              <a class="btn btn-outline-info mb-4" href="?page={{page_obj.paginator.num_pages}} ">Last</a>
-            {% endif %}
-
-
-
-
-           <!-- -------------------------------------- ACA TERMINA LO DE PAGINACION --------------------- -->
-
-
-
-
-
 
 
 {% if page_obj|length is 0 %}
 
-<div class="container card" style="text-align: center">
-  <div class="row">
-    <div class="col-md-10">
-      <p>
+      <p style="text-align: center"> 
       <h4>Lo sentimos, esta categoria aun no contiene post ...</h4>
       </p>
 
-    </div>
-
-  </div>
-
-</div>
 
 {% endif %}
 
-
-{% if page_obj|length > 0 %}
-<div class="container" style="position: relative;">
-  <div class="row">
-    <div class="col-md-4 col-lg-10" style="position: absolute; top: -305px;
-    left: 70%; width: 380px; padding-left: 40px">
-
-      <strong>
-        <p style="width: 80px;margin-bottom:10px">Archivos</p>
-      </strong>
-      <form action="/categoria/{{categ}}/filtro/" method="GET">
-        <div class="form-group row">
-          <!-- <label for="example-text-input" class="col-1 col-form-label">Desde </label> -->
-
-          <div class="col-2">
-            <input type="date" name="desde">
-
-          </div>
-        </div>
-        <div class="form-group row">
-          <!-- <label for="example-text-input" class="col-1 col-form-label">Hasta</label> -->
-          <div class="col-2">
-            <input type="date" name="hasta">
-          </div>
-        </div>
-        <div class="d-grid gap-2 col-9 mx-auto" style="padding-left: 120px">
-          <button type="submit" name="Buscar" class="btn btn-outline-success btn-sm"
-            style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"> <img
-              src="{% static 'img/search.svg' %}" style="width:17px;height:17px" alt='' /></button>
-          <!-- <input type="submit" name="Buscar" class="btn btn-outline-success"> -->
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-
-</div>
-</div>
-</div>
-{% endif %}
-{% endif %}
 {% endblock %}
