--- a/src/template/blog/filtro.html
+++ b/src/template/blog/filtro.html
@@ -78,7 +78,7 @@
 
             {% for num in page_obj.paginator.page_range %}
               {% if page_obj.number == num %}
-                <a class="btn btn-info mb-4" href="&?desde={{desde}}&hasta={{hasta}}page={{num}}">{{num}}</a>
+                <a class="btn btn-info mb-4" href="?desde={{desde}}&hasta={{hasta}}&page={{num}}">{{num}}</a>
               {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
                 <a class="btn btn-outline-info mb-4" href="?desde={{desde}}&hasta={{hasta}}&page={{num}}">{{num}}</a>
               {% endif %}
