--- a/src/template/blog/categorias.html
+++ b/src/template/blog/categorias.html
@@ -9,6 +9,7 @@
 {% block listado %}
 
 <!-- Main Content -->
+{% if existe %}
 {% if page_obj|length > 0 %}
 
     <div class="col-lg-8 col-md-10 mx-auto post-container">
@@ -74,6 +75,12 @@
       </p>
 
 
+{% endif %}
+
+{% else %}
+ <p style="text-align: center"> 
+      <h4>Lo sentimos, esta categoria no existe...</h4>
+      </p>
 {% endif %}
 
 {% endblock %}
