--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -44,6 +44,7 @@
 
 
   <hr style="width: 60%">
+
   <div style="margin-left:15px; margin-bottom: 15px;">
     <h6>Comentarios </h6>
   </div>
@@ -115,52 +116,49 @@
       </div>
 
       <div id="collapse{{comentario.id}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-        <div class="card-body">
-          <div style="margin-top: 15px; margin-bottom: 15px; font-size:15px; margin-left: 50px;margin-right: 50px">
+        <div class="row card-body">
+          <!-- <div clastyle="margin-top: 15px; margin-bottom: 15px; font-size:15px; margin-left: 50px;margin-right: 50px">
             {{comentario.contenido}}
+          </div> -->
+          <div class="col-md-10">
+            <p style="padding-left: 25px"> {{comentario.contenido}}</p>
           </div>
-         
-          <br>
+          <div class="col-md-2">
 
-          <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
+            {% if user.is_authenticated %}
 
+            {% if user.id == comentario.autor_id %}
 
-          {% if user.is_authenticated %}
-
-          {% if user.id == comentario.autor_id %}
-          <div class="container float-right col-9">
             <div class="row ">
-              <div class="container float-right col-lg-6" style="margin-right: 100px">
-                <div class="row ">
-                  <div class="col-md-4">
-                    <p class="float-right">
-                      <a href="{% url 'edicion' comentario.id%}"
-                        style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
-                        role="button" class="btn btn-outline-info" type="image/x-icon"> <img
-                          src="{% static 'img/pencil.svg' %}" style="width:17px;height:17px" alt='' /></a>
+              <div class="col-md-12">
+                <p class="float-right">
+                  <a href="{% url 'edicion' pk=comentario.id post_id=post.id %}"
+                    style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                    role="button" class="btn btn-outline-info" type="image/x-icon"> <img
+                      src="{% static 'img/pencil.svg' %}" style="width:17px;height:17px" alt='' /></a>
 
-                      <a href="#" onclick="eliminarComentario({{comentario.id}}, {{post.id }})"
-                        style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
-                        role="button" class="btn btn-outline-danger" type="image/x-icon"> <img
-                          src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
-                    </p>
-                  </div>
-                </div>
+                  <a href="#" onclick="eliminarComentario({{comentario.id}}, {{post.id }})"
+                    style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                    role="button" class="btn btn-outline-danger" type="image/x-icon"> <img
+                      src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
+                </p>
               </div>
             </div>
+
+
+
+            {% endif %}
+            {% endif %}
+
           </div>
-       
-        {% endif %}
-        {% endif %}
+        </div>
+
+        <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
+
+        <br>
+
       </div>
-
-
-      <!-- ---------------ACA VA LO DE ELIMINAR COMENTARIO---------------- -->
-
-      <br>
-
     </div>
-  </div>
   </div>
 
 
